--- a/css/main.css
+++ b/css/main.css
@@ -213,4 +213,11 @@ h4 {
   color: red;
 }
 
+.profile-image  {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  width: 20px;
+  height: 20px;
+}
+
 
