--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ h4 {
   float: left;
   height: 54px;
   width: 54px;
+  object-fit: cover;
   border-radius: 27px;
   -webkit-border-radius: 27px;
   -moz-border-radius: 27px;
@@ -214,10 +215,14 @@ h4 {
 }
 
 .profile-image  {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: inline-block;
+  object-fit: cover;
 }
 
+.nav>li>a.dropdown-toggle {
+  display: inline-block;
+}
 
