--- a/css/main.css
+++ b/css/main.css
@@ -221,9 +221,17 @@ h4 {
   border-radius: 50%;
   display: inline-block;
   object-fit: cover;
+  border: 1px solid grey;
 }
 
 .nav>li>a.dropdown-toggle {
   display: inline-block;
+  padding-left: 5px;
 }
+
+#display-name {
+  padding-right: 10px;
+  padding-left: 0px;
+}
+
 
