--- a/css/main.css
+++ b/css/main.css
@@ -234,4 +234,15 @@ h4 {
   padding-left: 0px;
 }
 
+@media (min-width: 992px) {
+  .navbar-logo {
+    width: 43px;
+    height: 42px;
+  }
+}
 
+@media (min-width: 1200px) {
+  .container {
+    width: 100%;
+  }
+}
