--- a/css/main.css
+++ b/css/main.css
@@ -238,6 +238,10 @@ h4 {
   padding-left: 0px;
 }
 
+.new-feature {
+  color:#E20026;
+}
+
 @media (min-width: 992px) {
   .navbar-logo {
     width: 43px;
@@ -250,3 +254,13 @@ h4 {
     width: 100%;
   }
 }
+
+div #see-the-code {
+  margin-top: 20px;
+}
+
+#see-the-code h3 {
+  padding-top: 15px;
+  padding-left: 30px;
+}
+
