--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,16 @@ h4 {
   border: 1px solid grey;
 }
 
+.github-image  {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: inline-block;
+  object-fit: cover;
+  border: 1px solid grey;
+}
+
+
 .nav>li>a.dropdown-toggle {
   display: inline-block;
   padding-left: 5px;
@@ -262,5 +272,11 @@ div #see-the-code {
 #see-the-code h3 {
   padding-top: 15px;
   padding-left: 30px;
+}
+
+@media (max-width: 1300px) {
+  .navbar-left {
+    display: none;
+  }
 }
 
