better html and css formatting, right panel is now to the left :)

--- a/css/main.css
+++ b/css/main.css
@@ -120,9 +120,9 @@ h4 {
 
 #rightpane {
   font-size: 15px !important;
-  float: right;
+  float: left;
   top: 0px;
-  right:0px;
+  left:0px;
   width: 350px;
   height: 100%;
   position: relative;
