--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ h4 {
   float: left;
   top: 0px;
   left:0px;
-  width: 350px;
+  width: 50vw;
   height: 100%;
   position: relative;
   padding: 11px;
